fix: implement transformer for response in api
