# app/Http/Controllers/Api/AuthController.php
@@ -22,7 +22,7 @@ class AuthController extends Controller
     }
     /**
      * @OA\Post(
-     *     path="/api/register",
+     *     path="/register",
      *     summary="Register a new user",
      *     tags={"Auth"},
      *     @OA\RequestBody(
@@ -80,7 +80,7 @@ class AuthController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/api/login",
+     *     path="/login",
      *     summary="Login a user",
      *     tags={"Auth"},
      *     @OA\RequestBody(
