# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\PostCategoryController;
 use App\Http\Controllers\Api\PostController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -30,4 +31,11 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::post('posts', [PostController::class, 'store']);
     Route::put('posts/{id}', [PostController::class, 'update']);
     Route::delete('posts/{id}', [PostController::class, 'destroy']);
+
+    // Category routes
+    Route::get('post-categories', [PostCategoryController::class, 'index']);
+    Route::post('post-categories', [PostCategoryController::class, 'store']);
+    Route::put('post-categories/{id}', [PostCategoryController::class, 'update']);
+    Route::delete('post-categories/{id}', [PostCategoryController::class, 'destroy']);
+
 });
