# storage/api-docs/api-docs.json
@@ -10,13 +10,13 @@
         }
     ],
     "paths": {
-        "/api/register": {
+        "/register": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Register a new user",
-                "operationId": "8e4e3cb7b46126f4696379d3c7eeb4ad",
+                "operationId": "5d4fa5d5607ed675ba93907e1fc94534",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -101,13 +101,13 @@
                 }
             }
         },
-        "/api/login": {
+        "/login": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Login a user",
-                "operationId": "222b2625838e3c57e017987f73598fda",
+                "operationId": "67d6d0fdd54fba132e1b6f55ca254183",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -170,7 +170,256 @@
                 }
             }
         },
-        "/api/posts": {
+        "/post-categories": {
+            "get": {
+                "tags": [
+                    "Post Categories"
+                ],
+                "summary": "Get a list of post categories",
+                "operationId": "82ac30d88c84ca626fcbe91dd3f688eb",
+                "responses": {
+                    "200": {
+                        "description": "List of post categories",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer",
+                                                "example": 1
+                                            },
+                                            "name": {
+                                                "type": "string",
+                                                "example": "Technology"
+                                            },
+                                            "description": {
+                                                "type": "string",
+                                                "example": "Posts related to technology"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Post Categories"
+                ],
+                "summary": "Create a new post category",
+                "operationId": "bbe644dd3f70eadc08b91436cb4649b4",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Health"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Post category created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 2
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "example": "Health"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errors": {
+                                            "properties": {
+                                                "name": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string"
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/post-categories/{id}": {
+            "put": {
+                "tags": [
+                    "Post Categories"
+                ],
+                "summary": "Update an existing post category",
+                "operationId": "70c833531b4f68afec2c1ca3c3b42c99",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the post category",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Updated Name"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Post category updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "example": "Updated Name"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errors": {
+                                            "properties": {
+                                                "name": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string"
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Post category not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Post category not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/categories/{id}": {
+            "delete": {
+                "tags": [
+                    "Post Categories"
+                ],
+                "summary": "Delete a post category",
+                "operationId": "d5392ae1bbba12f86934acf853ab812f",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the post category",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Post category deleted successfully"
+                    },
+                    "404": {
+                        "description": "Post category not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Post category not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/posts": {
             "get": {
                 "tags": [
                     "Posts"
@@ -202,9 +451,7 @@
                         "description": "Not Found"
                     }
                 }
-            }
-        },
-        "/posts": {
+            },
             "post": {
                 "tags": [
                     "Posts"
@@ -282,13 +529,13 @@
                 ]
             }
         },
-        "/api/posts/{id}": {
+        "/posts/{id}": {
             "put": {
                 "tags": [
                     "Posts"
                 ],
                 "summary": "Update an existing post",
-                "operationId": "650f4bed0846d9350903d8a17c7b503a",
+                "operationId": "56b92780703545f9cdee51b2f0bfd2f3",
                 "parameters": [
                     {
                         "name": "id",
@@ -410,7 +657,7 @@
                     "Posts"
                 ],
                 "summary": "Delete a post",
-                "operationId": "9d99f2e42af2f722a058a86245aa856f",
+                "operationId": "a879f12c52aaa72acee21585bf617046",
                 "parameters": [
                     {
                         "name": "id",
@@ -531,6 +778,10 @@
         {
             "name": "Auth",
             "description": "Auth"
+        },
+        {
+            "name": "Post Categories",
+            "description": "Post Categories"
         },
         {
             "name": "Posts",
